--- a/.github/workflows/getOPML-RSS-2MD.yml
+++ b/.github/workflows/getOPML-RSS-2MD.yml
@@ -37,5 +37,5 @@ jobs:
         git diff
         git config user.name "Automated"
         git config user.email "actions@users.noreply.github.com"
-        git diff --quiet || (git add -A && git commit -m "Updated with latest")
+        git diff-index --quiet HEAD -- || (git add -A && git commit -m "Updated with latest")
         git push
