--- a/.github/workflows/getOPML-RSS-2MD.yml
+++ b/.github/workflows/getOPML-RSS-2MD.yml
@@ -39,7 +39,7 @@ jobs:
           sed -e 's/^##### /            * /g' > opml/changeNotes.opml
     - name: Commit and push changes
       run: |-
-        git diff-index
+        git diff
         git config user.name "Automated"
         git config user.email "actions@users.noreply.github.com"
         git diff-index --quiet HEAD -- || (git add -A && git commit -m "Updated with latest")
