--- a/.github/workflows/getOPML-RSS-2MD.yml
+++ b/.github/workflows/getOPML-RSS-2MD.yml
@@ -43,5 +43,5 @@ jobs:
         git config user.name "Automated"
         git config user.email "actions@users.noreply.github.com"
         #git diff-index --quiet HEAD -- || (git add -A && git commit -m "Updated with latest")
-        git ls-files --deleted --modified --others --exclude-standard || (git add -A && git commit -m "Updated with latest")
+        [ ! -z "$(git status --porcelain=v1 2>/dev/null)" ] && (git add -A && git commit -m "Updated with latest")
         git push
