--- a/.github/workflows/getOPML-RSS-2MD.yml
+++ b/.github/workflows/getOPML-RSS-2MD.yml
@@ -32,16 +32,17 @@ jobs:
           --to=markdown_mmd
           --output=opml/changeNotes.md
           opml/changeNotes.opml      
-        run: >-
-          sed -e 's/^## /* /g' opml/changeNotes.md | 
-          sed -e 's/^### /    * /g' | 
-          sed -e 's/^#### /        * /g' | 
+    - name: sed on md
+      run: |
+          sed -e 's/^## /* /g' opml/changeNotes.md | \
+          sed -e 's/^### /    * /g' | \
+          sed -e 's/^#### /        * /g' | \
           sed -e 's/^##### /            * /g' > opml/changeNotes.md
     - name: Commit and push changes
       run: |-
-        git diff
-        git config user.name "Automated"
-        git config user.email "actions@users.noreply.github.com"
-        #git diff-index --quiet HEAD -- || (git add -A && git commit -m "Updated with latest")
-        [ ! -z "$(git status --porcelain=v1 2>/dev/null)" ] && (git add -A && git commit -m "Updated with latest")
-        git push
+            git diff
+            git config user.name "Automated"
+            git config user.email "actions@users.noreply.github.com"
+            #git diff-index --quiet HEAD -- || (git add -A && git commit -m "Updated with latest")
+            [ ! -z "$(git status --porcelain=v1 2>/dev/null)" ] && (git add -A && git commit -m "Updated with latest")
+            git push
