--- a/.github/workflows/getOPML-RSS-2MD.yml
+++ b/.github/workflows/getOPML-RSS-2MD.yml
@@ -33,7 +33,7 @@ jobs:
           --output=opml/changeNotes.md
           opml/changeNotes.opml      
     - name: sed on md
-      run: |
+      run: >-
           sed -e 's/^## /* /g' opml/changeNotes.md | \
           sed -e 's/^### /    * /g' | \
           sed -e 's/^#### /        * /g' | \
