--- a/.github/workflows/getOPML-RSS-2MD.yml
+++ b/.github/workflows/getOPML-RSS-2MD.yml
@@ -34,10 +34,10 @@ jobs:
           opml/changeNotes.opml      
     - name: sed on md
       run: >-
-          sed -e 's/^## /\- /g' opml/changeNotes.md | 
-          sed -e 's/^### /    \- /g' | 
-          sed -e 's/^#### /        \- /g' | 
-          sed -e 's/^##### /            \- /g' > opml/changeNotes.md
+          sed -e 's/^## /* /g' opml/changeNotes.md | 
+          sed -e 's/^### /    * /g' | 
+          sed -e 's/^#### /        * /g' | 
+          sed -e 's/^##### /            * /g' > opml/changeNotes.md
     - name: Commit and push changes
       run: |-
             git diff
