--- a/.github/workflows/getOPML-RSS-2MD.yml
+++ b/.github/workflows/getOPML-RSS-2MD.yml
@@ -29,7 +29,7 @@ jobs:
         args: >-  # allows you to break string into multiple lines
           --standalone
           --from=opml
-          --to=markdown_mmd
+          --to=gfm
           --output=opml/changeNotes.md
           opml/changeNotes.opml      
     - name: sed on md file
