--- a/.github/workflows/getOPML-RSS-2MD.yml
+++ b/.github/workflows/getOPML-RSS-2MD.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-## downloads changeNotes.opml every 15 minutes http://drummer.scripting.com/davewiner/drummer/changeNotes.opml
+# downloads changeNotes.opml every 15 minutes http://drummer.scripting.com/davewiner/drummer/changeNotes.opml
 
 name: ScriptingDrummerBackupsPlusMD
 
