--- a/.github/workflows/getOPML-RSS-2MD.yml
+++ b/.github/workflows/getOPML-RSS-2MD.yml
@@ -38,6 +38,7 @@ jobs:
           sed -i 's/^### /  * /g' opml/changeNotes.md
           sed -i 's/^#### /    * /g' opml/changeNotes.md
           sed -i 's/^##### /      * /g' opml/changeNotes.md
+          sed -i 's/^###### /        * /g' opml/changeNotes.md          
     - name: Commit and push changes
       run: |-
             git diff
