--- a/.github/workflows/getOPML-RSS-2MD.yml
+++ b/.github/workflows/getOPML-RSS-2MD.yml
@@ -23,6 +23,7 @@ jobs:
       run: |-       
         curl "http://drummer.scripting.com/davewiner/drummer/changeNotes.opml" -o opml/changeNotes.opml
         curl http://scripting.com/rss.xml -o rss/scripting.com-rss.xml
+        curl "https://github.com/scripting/instantOutlines/blob/main/outlines/twitter/davewiner.opml" -o davewiner.opml
     - name: pandoc conversion
       uses: docker://pandoc/core:2.9 
       with:
