--- a/.github/workflows/get-opml-rss.yml
+++ b/.github/workflows/get-opml-rss.yml
@@ -24,10 +24,12 @@ jobs:
         
         curl "http://drummer.scripting.com/davewiner/drummer/changeNotes.opml" -o opml/changeNotes.opml
         curl http://scripting.com/rss.xml -o rss/scripting.com-rss.xml
+        curl "https://github.com/scripting/instantOutlines/blob/main/outlines/twitter/davewiner.opml" -o opml/davewiner.opml
     - name: Commit and push changes
       run: |-
         git diff
         git config user.name "Automated"
         git config user.email "actions@users.noreply.github.com"
-        git diff --quiet || (git add -A && git commit -m "Updated with latest")
+        #git diff --quiet || (git add -A && git commit -m "Updated with latest")
+        [ ! -z "$(git status --porcelain=v1 2>/dev/null)" ] && (git add -A && git commit -m "Updated with latest")        
         git push
