--- a/.github/workflows/get-opml-rss.yml
+++ b/.github/workflows/get-opml-rss.yml
@@ -1,11 +1,11 @@
 # This is a basic workflow to help you get started with Actions
-# downloads changeNotes.opml every 15 minutes http://drummer.scripting.com/davewiner/drummer/changeNotes.opml
+# downloads http://drummer.scripting.com/davewiner/drummer/changeNotes.opml and other files every 15 minutes then commits any content changes to the repo 
 
 name: ScriptingDrummerBackups
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+  # Triggers the workflow on push or pull request events but only for the main branch plus on a schedule as set below
   push:
     branches: [ main ]
   schedule:
@@ -21,12 +21,18 @@ jobs:
         fetch-depth: 0
     - name: Download Feed
       run: |-
-        
+        #  Getting our files, really I should move these into a separate list
         curl "http://drummer.scripting.com/davewiner/drummer/changeNotes.opml" -o opml/changeNotes.opml
         curl http://scripting.com/rss.xml -o rss/scripting.com-rss.xml
         curl "https://raw.githubusercontent.com/scripting/instantOutlines/main/outlines/twitter/davewiner.opml" -o opml/davewiner.opml
     - name: Commit and push changes
       run: |-
+        #
+        #  based on https://thechels.uk/saving-json-github-action
+        #  git diff at the start to clear comparisons based on timestamps or something as the files are downloaded
+        #   each time but may not have changed in content
+        #  [!-z.... line checks for changes and only runs the git add and git commit if there sre some 
+        #
         git diff
         git config user.name "Automated"
         git config user.email "actions@users.noreply.github.com"
